<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="month">月</string>
    <string name="mine">我的</string>
    <string name="hint">提示</string>
    <string name="calm">平静</string>
    <string name="sure">确定</string>
    <string name="reset">重置</string>
    <string name="login">登录</string>
    <string name="close">关闭</string>
    <string name="retry">重试</string>
    <string name="agree">同意</string>
    <string name="debug">调试</string>
    <string name="relax">放松</string>
    <string name="cancel">取消</string>
    <string name="ensure">确认</string>
    <string name="delete">删除</string>
    <string name="refuse">拒绝</string>
    <string name="gentle">温柔</string>
    <string name="breathe">呼吸</string>
    <string name="calmTwo">冷静</string>
    <string name="homePage">首页</string>
    <string name="noData">暂无数据</string>
    <string name="goToOpen">去打开</string>
    <string name="carousel">轮播图</string>
    <string name="nextTime">下次吧</string>
    <string name="zeroSecond">0 秒</string>
    <string name="saveFail">保存失败</string>
    <string name="playFail">播放失败</string>
    <string name="nowUpdate">现在更新</string>
    <string name="progressBar">进度条</string>
    <string name="chooseDate">选择日期</string>
    <string name="chooseYear">选择年份</string>
    <string name="thenUpdate">那就更新</string>
    <string name="continueString">继续</string>
    <string name="noUpdateYet">先不更新</string>
    <string name="continueUse">继续使用</string>
    <string name="unknownDate">未知日期</string>
    <string name="checkSetting">检查设置</string>
    <string name="fileNotExit">文件不存在</string>
    <string name="privacyPolicy">隐私政策</string>
    <string name="userAgreement">用户协议</string>
    <string name="versionUpdate">版本更新</string>
    <string name="carouselDetail">轮播详情</string>
    <string name="networkAnomaly">网络异常</string>
    <string name="copySuccessful">复制成功</string>
    <string name="exitAppHint">再按一次退出</string>
    <string name="inputPhoneNumber">输入手机号</string>
    <string name="deleteAudioFail">音频删除失败</string>
    <string name="loginPageTopHint">陪你过每一天</string>
    <string name="currentNoNetwork">当前无网络连接</string>
    <string name="knowAndCompanionUpdate">知伴更新</string>
    <string name="notAgreeAngLoginOut">不同意并退出</string>
    <string name="dataStatusIsAbnormal">数据状态异常</string>
    <string name="openNotificationHint">打开通知提示</string>
    <string name="canNotStartRecording">无法开始录制</string>
    <string name="canNotPauseRecording">无法暂停录制</string>
    <string name="canNotResumeRecording">无法恢复录制</string>
    <string name="swipeToViewClickToUse">滑动查看 点击使用</string>
    <string name="inputCorrectPhoneNumber">输入正确的手机号</string>
    <string name="needTurnOnLocationServices">需开启定位服务</string>
    <string name="loadFailAndTryAgainLater">加载失败，稍后重试</string>
    <string name="volumeMonitoringIsUnavailable">音量监听不可用</string>
    <string name="userAgreementAndPrivacyPolicy">用户协议和隐私政策</string>
    <string name="networkExceptionAndTryAgainLater">网络异常，稍后重试</string>
    <string name="neverMissTheLatestNewsAnymore">再也不会错过最新消息了</string>
    <string name="serverExceptionAndTryAgainLater">服务器异常，稍后重试</string>
    <string name="theScreenshotHasBeenSavedToTheAlbum">截图已保存到相册</string>
    <string name="coreFundamentalAreBasedOnThePermission">核心功能需要该权限</string>
    <string name="installApplicationAreBasedOnThePermission">安装应用需要该权限</string>
    <string name="noApplicationFoundThatCanOpenThisFile">没有找到可以打开此文件的应用</string>
    <string name="toEnsureNormalUseThisVersionMustBeUpdated">为保证正常使用 该版本必须更新</string>
    <string name="userAgreementAndPrivacyPolicyContent">审慎阅读《用户协议》与《隐私政策》条款内容</string>
    <string name="youNeedToAllowNecessaryPermissionInSettingManually">你需要手动在设置中授予该权限</string>
    <!--fragmentation-->
    <string name="fragmentationStackView">栈视图 (StackView)</string>
    <string name="formatFragmentationStackHelp">* - 不在回退栈\n%1$s - 可见</string>
    <!--banner-->
    <string name="bannerNeedAndOnlySetLinearLayoutManagerType">需且只能设线性布局管理器类型</string>
    <string name="bannerContextCorrespondsToTheActivityInstance">上下文对应 Activity 实例</string>
    <string name="bannerViewPagerIsNotUsedAsTheUnderlyingImplementationHere">此处未用 ViewPager 作底层实现</string>
    <!--format-->
    <string name="formatSeconds">%1$s 秒</string>
    <string name="formatLocation">经度 %1$.2f，纬度 %2$.2f，精度 %3$.2f 米</string>
</resources>