<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="?attr/materialCardViewFilledStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dp_20"
            android:text="@string/userAgreementAndPrivacyPolicy"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/dialogUserAgreementAndPrivacyPolicyTvUserAgreementAndPrivacyPolicyContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingVertical="@dimen/dp_40"
            android:text="@string/userAgreementAndPrivacyPolicyContent"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/sp_13" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <TextView
                android:id="@+id/dialogUserAgreementAndPrivacyPolicyTvNotAgreeAngLoginOut"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/notAgreeAngLoginOut"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/sp_14" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="@dimen/px1"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/dialogUserAgreementAndPrivacyPolicyTvAgree"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/agree"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>